// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct ExpensesSummary on multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    23
     
    expenses
     totalling 
    $24,523.32
  </h3>
</div>
`;

exports[`should render correct ExpensesSummary on single expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.45
  </h3>
</div>
`;
